force-app/main/default/objects/Toolbank_Help_Page__mdt/Toolbank_Help_Page__mdt.object-meta.xml
<CustomObject>
    <label>Toolbank Help Page</label>
    <pluralLabel>Toolbank Help Page</pluralLabel>
</CustomObject>