force-app/main/default/objects/Toolbank_Help_Page__mdt/fields/Affiliate_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Account_Id__c</fullName>
    <label>Affiliate Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>