force-app/main/default/objects/Toolbank_Help_Page__mdt/fields/Affiliate_Address__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Address__c</fullName>
    <label>Affiliate Address</label>
    <type>TextArea</type>
</CustomField>