force-app/main/default/objects/Toolbank_Help_Page__mdt/fields/Affiliate_Email__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Email__c</fullName>
    <label>Affiliate Email</label>
    <type>Email</type>
</CustomField>