force-app/main/default/objects/Toolbank_Help_Page__mdt/fields/Affiliate_Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Phone_number__c</fullName>
    <label>Affiliate Phone number</label>
    <type>Phone</type>
</CustomField>