force-app/main/default/objects/Toolbank_Help_Page__mdt/fields/Note_to_the_Agency__c.field-meta.xml
<CustomField>
    <fullName>Note_to_the_Agency__c</fullName>
    <label>Note to the Agency</label>
    <type>TextArea</type>
</CustomField>