force-app/main/default/objects/Toolbank_Help_Page__mdt/fields/Remaining_Address__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Address__c</fullName>
    <label>Remaining Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>